introduction-to-kubernetes/template/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  selector:
    app: example-app
  ports:
  - port: 80
    targetPort: 3000
